# pysoi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  README.qmd  dev-requirements.txt  pyproject.toml  setup.py
.github/workflows/: lint.yml  tests.yml
examples/: compare_indices.py  plot_oni.py
pysoi/: __init__.py  download_aao.py  download_ao.py  download_asymsam.py  download_dmi.py  download_enso.py  download_mei.py  download_nao.py  download_npgo.py  download_oni.py  download_pdo.py  download_soi.py  utils.py
tests/: run_tests.py
tests/test_pysoi/: __init__.py  test_download_oni.py  test_general_downloads.py  test_utils.py
