[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysoi"
version = "0.1.0"
description = "Import Various Northern and Southern Hemisphere Climate Indices"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Sam Albers", email = "sam.albers@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas>=1.0.0",
    "requests>=2.24.0",
    "numpy>=1.19.0",
]

[project.urls]
"Homepage" = "https://github.com/boshek/pysoi"
"Bug Tracker" = "https://github.com/boshek/pysoi/issues"

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "black>=23.12.1",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
]

[tool.pytest]
testpaths = ["tests"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
target-version = 'py38'
select = ['E', 'F', 'I', 'W']
ignore = []

[tool.ruff.isort]
known-first-party = ['pysoi']

[tool.mypy]
python_version = '3.8'
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
